--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,93 +1,117 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{wu2017storm,
+  title={Storm-Lite: An Inexpensive Tool to Demonstrate Stochastic Super Resolution Microscopy Techniques in the Classroom},
+  author={Wu, Anthony and Moreno, Lark and Prigozhin, Maxim and Denos, Sharlene},
+  journal={Biophysical Journal},
+  volume={112},
+  number={3},
+  pages={464a},
+  year={2017},
+  publisher={Elsevier}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{ye2019diffusion,
+  title={Diffusion Histology Imaging to Improve Lesion Detection and Classification in Multiple Sclerosis},
+  author={Ye, Zezhong and George, Ajit and Wu, Anthony T and Niu, Xuan and Lin, Joshua and Adusumilli, Gautam and Cross, Anne H and Sun, Peng and Song, Sheng-Kwei},
+  journal={medRxiv},
+  pages={19009126},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory Press}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{ye2019diffusion,
+  title={Diffusion Histology Imaging Detects and Classifies Glioblastoma Pathology Missed by Conventional Magnetic Resonance Imaging},
+  author={Ye, Zezhong and Price, Richard L and Liu, Xiran and Lin, Joshua and Yang, Qingsong and Sun, Peng and Wu, Anthony and Wang, Liang and Han, Rowland and Song, Chunyu and others},
+  journal={bioRxiv},
+  pages={843367},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  selected={true}
+@article{ye2020diffusion,
+  title={Diffusion basis spectrum imaging with deep neural network differentiates distinct histology in pediatric brain tumors},
+  author={Ye, Zezhong and Srinivasa, Komal and Lin, Joshua and Viox, Jeffrey D and Song, Chunyu and Wu, Anthony T and Sun, Peng and Song, Sheng-Kwei and Dahiya, Sonika and Rubin, Joshua B},
+  journal={bioRxiv},
+  pages={2020--04},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{ye2020deep,
+  title={Deep learning with diffusion basis spectrum imaging for classification of multiple sclerosis lesions},
+  author={Ye, Zezhong and George, Ajit and Wu, Anthony T and Niu, Xuan and Lin, Joshua and Adusumilli, Gautam and Naismith, Robert T and Cross, Anne H and Sun, Peng and Song, Sheng-Kwei},
+  journal={Annals of clinical and translational neurology},
+  volume={7},
+  number={5},
+  pages={695--706},
+  year={2020}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{ye2021diffusion,
+  title={Diffusion histology imaging differentiates distinct pediatric brain tumor histology},
+  author={Ye, Zezhong and Srinivasa, Komal and Meyer, Ashely and Sun, Peng and Lin, Joshua and Viox, Jeffrey D and Song, Chunyu and Wu, Anthony T and Song, Sheng-Kwei and Dahiya, Sonika and others},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={4749},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{ye2020diffusion,
+  title={Diffusion histology imaging combining diffusion basis spectrum imaging (DBSI) and machine learning improves detection and classification of glioblastoma pathology},
+  author={Ye, Zezhong and Price, Richard L and Liu, Xiran and Lin, Joshua and Yang, Qingsong and Sun, Peng and Wu, Anthony T and Wang, Liang and Han, Rowland H and Song, Chunyu and others},
+  journal={Clinical Cancer Research},
+  volume={26},
+  number={20},
+  pages={5388--5399},
+  year={2020},
+  publisher={American Association for Cancer Research}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{ye2021deep,
+  title={Deep neural network analysis employing diffusion basis spectrum imaging metrics as classifiers improves prostate cancer detection and grading},
+  author={Ye, Zezhong and Yang, Qingsong and Lin, Joshua and Sun, Peng and Shao, Chengwei and Yu, Yongwei and Chen, Luguang and Zhu, Yasheng and Wu, Anthony T and George, Ajit and others},
+  journal={bioRxiv},
+  pages={2021--03},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@phdthesis{wu2021modular,
+  title={Modular Neural Network and Clustering using Diffusion Basis Spectrum Imaging (DBSI) metrics improves Prostate Cancer Grading},
+  author={Wu, Anthony},
+  year={2021},
+  school={Washington University in St. Louis}
+}
+
+@article{yediffusion,
+  title={Diffusion Histology Imaging Characterizes and Differentiates Various Tumor Histological Features in High-Grade Brain Tumors},
+  author={Ye, Zezhong and Gary, Sam E and Viox, Jeffrey D and Wu, Anthony T and Lin, Joshua and Sun, Peng and Rubin, Joshua B and Dahiya, Sonika and Song, Sheng-Kwei}
+}
+
+@article{yediffusion,
+  title={Diffusion Histology Imaging Classifies Lesions in Multiple Sclerosis},
+  author={Ye, Zezhong and George, Ajit and Wu, Anthony T and Niu, Xuan and Lin, Joshua and Adusumilli, Gautam and Naismith, Robert T and Cross, Anne H and Sun, Peng and Song, Sheng-Kwei}
+}
+
+@article{rahmani2023twelve,
+  title={Twelve Weeks of Intermittent Caloric Restriction Diet Mitigates Neuroinflammation in Midlife Individuals with Multiple Sclerosis: A Pilot Study with Implications for Prevention of Alzheimer’s Disease},
+  author={Rahmani, Farzaneh and Ghezzi, Laura and Tosti, Valeria and Liu, Jingxia and Song, Sheng-Kwei and Wu, Anthony T and Rajamanickam, Jayashree and Obert, Kathleen A and Benzinger, Tammie LS and Mittendorfer, Bettina and others},
+  journal={Journal of Alzheimer's Disease},
+  volume={93},
+  number={1},
+  pages={263--273},
+  year={2023},
+  publisher={IOS Press}
+}
+
+@article{dutta2024physician,
+  title={Physician marriage survey reveals sex and specialty differences in marital satisfaction factors},
+  author={Dutta, Rajeev R and Wu, Anthony T and Picton, Bryce and Shah, Saloni and Chernyak, Michelle and Bauer, Kelly and Solomon, Sean and Chang, Josephine and Nguyen, Britney and Jiang, Mio and others},
+  journal={Scientific Reports},
+  volume={14},
+  number={1},
+  pages={5159},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
 }
