--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,142 +1,117 @@
-@Article{ijms242015105,
-AUTHOR = {Khosravi, Pooya and Huck, Nolan A. and Shahraki, Kourosh and Hunter, Stephen C. and Danza, Clifford Neil and Kim, So Young and Forbes, Brian J. and Dai, Shuan and Levin, Alex V. and Binenbaum, Gil and Chang, Peter D. and Suh, Donny W.},
-TITLE = {Deep Learning Approach for Differentiating Etiologies of Pediatric Retinal Hemorrhages: A Multicenter Study},
-JOURNAL = {International Journal of Molecular Sciences},
-VOLUME = {24},
-YEAR = {2023},
-NUMBER = {20},
-ARTICLE-NUMBER = {15105},
-URL = {https://www.mdpi.com/1422-0067/24/20/15105},
-ISSN = {1422-0067},
-abbr={IJMS},
-selected={true},
-ABSTRACT = {Retinal hemorrhages in pediatric patients can be a diagnostic challenge for ophthalmologists. These hemorrhages can occur due to various underlying etiologies, including abusive head trauma, accidental trauma, and medical conditions. Accurate identification of the etiology is crucial for appropriate management and legal considerations. In recent years, deep learning techniques have shown promise in assisting healthcare professionals in making more accurate and timely diagnosis of a variety of disorders. We explore the potential of deep learning approaches for differentiating etiologies of pediatric retinal hemorrhages. Our study, which spanned multiple centers, analyzed 898 images, resulting in a final dataset of 597 retinal hemorrhage fundus photos categorized into medical (49.9%) and trauma (50.1%) etiologies. Deep learning models, specifically those based on ResNet and transformer architectures, were applied; FastViT-SA12, a hybrid transformer model, achieved the highest accuracy (90.55%) and area under the receiver operating characteristic curve (AUC) of 90.55%, while ResNet18 secured the highest sensitivity value (96.77%) on an independent test dataset. The study highlighted areas for optimization in artificial intelligence (AI) models specifically for pediatric retinal hemorrhages. While AI proves valuable in diagnosing these hemorrhages, the expertise of medical professionals remains irreplaceable. Collaborative efforts between AI specialists and pediatric ophthalmologists are crucial to fully harness AI&rsquo;s potential in diagnosing etiologies of pediatric retinal hemorrhages.},
-DOI = {10.3390/ijms242015105}
-}
-
-@InProceedings{10.1007/978-3-031-43907-0_72,
-author="Han, Kun
-and Xiong, Yifeng
-and You, Chenyu
-and Khosravi, Pooya
-and Sun, Shanlin
-and Yan, Xiangyi
-and Duncan, James S.
-and Xie, Xiaohui",
-editor="Greenspan, Hayit
-and Madabhushi, Anant
-and Mousavi, Parvin
-and Salcudean, Septimiu
-and Duncan, James
-and Syeda-Mahmood, Tanveer
-and Taylor, Russell",
-title="MedGen3D: A Deep Generative Framework for Paired 3D Image and Mask Generation",
-booktitle="Medical Image Computing and Computer Assisted Intervention -- MICCAI 2023",
-year="2023",
-publisher="Springer Nature Switzerland",
-address="Cham",
-pages="759--769",
-abbr={MICCAI},
-selected={true},
-abstract="Acquiring and annotating sufficient labeled data is crucial in developing accurate and robust learning-based models, but obtaining such data can be challenging in many medical image segmentation tasks. One promising solution is to synthesize realistic data with ground-truth mask annotations. However, no prior studies have explored generating complete 3D volumetric images with masks. In this paper, we present MedGen3D, a deep generative framework that can generate paired 3D medical images and masks. First, we represent the 3D medical data as 2D sequences and propose the Multi-Condition Diffusion Probabilistic Model (MC-DPM) to generate multi-label mask sequences adhering to anatomical geometry. Then, we use an image sequence generator and semantic diffusion refiner conditioned on the generated mask sequences to produce realistic 3D medical images that align with the generated masks. Our proposed framework guarantees accurate alignment between synthetic images and segmentation maps. Experiments on 3D thoracic CT and brain MRI datasets show that our synthetic data is both diverse and faithful to the original data, and demonstrate the benefits for downstream segmentation tasks. We anticipate that MedGen3D's ability to synthesize paired 3D medical images and masks will prove valuable in training deep learning models for medical imaging tasks.",
-isbn="978-3-031-43907-0"
-}
-
-@article{lehrich2018fetal,
-  title={Fetal bovine serum-derived extracellular vesicles persist within vesicle-depleted culture media},
-  author={Lehrich, Brandon M and Liang, Yaxuan and Khosravi, Pooya and Federoff, Howard J and Fiandaca, Massimo S},
-  journal={International journal of molecular sciences},
-  volume={19},
-  number={11},
-  pages={3538},
-  year={2018},
-  abbr={IJMS},
-  publisher={MDPI}
-}
-
-@article{birkenbeuel2019medical,
-  title={Medical malpractice of vestibular schwannoma: a 40-year review of the United States legal databases},
-  author={Birkenbeuel, Jack and Vu, Kimberly and Lehrich, Brandon M and Abouzari, Mehdi and Cheung, Dillon and Khosravi, Pooya and Sahyouni, Ronald and Ziai, Kasra and Moshtaghi, Omid and Sahyouni, Sammy and others},
-  journal={Otology \& neurotology: official publication of the American Otological Society, American Neurotology Society [and] European Academy of Otology and Neurotology},
-  volume={40},
+@article{wu2017storm,
+  title={Storm-Lite: An Inexpensive Tool to Demonstrate Stochastic Super Resolution Microscopy Techniques in the Classroom},
+  author={Wu, Anthony and Moreno, Lark and Prigozhin, Maxim and Denos, Sharlene},
+  journal={Biophysical Journal},
+  volume={112},
   number={3},
-  pages={391},
+  pages={464a},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{ye2019diffusion,
+  title={Diffusion Histology Imaging to Improve Lesion Detection and Classification in Multiple Sclerosis},
+  author={Ye, Zezhong and George, Ajit and Wu, Anthony T and Niu, Xuan and Lin, Joshua and Adusumilli, Gautam and Cross, Anne H and Sun, Peng and Song, Sheng-Kwei},
+  journal={medRxiv},
+  pages={19009126},
   year={2019},
-  publisher={NIH Public Access}
+  publisher={Cold Spring Harbor Laboratory Press}
 }
 
-@article{abouzari2020prediction,
-  title={Prediction of vestibular schwannoma recurrence using artificial neural network},
-  author={Abouzari, Mehdi and Goshtasbi, Khodayar and Sarna, Brooke and Khosravi, Pooya and Reutershan, Trevor and Mostaghni, Navid and Lin, Harrison W and Djalilian, Hamid R},
-  journal={Laryngoscope Investigative Otolaryngology},
+@article{ye2019diffusion,
+  title={Diffusion Histology Imaging Detects and Classifies Glioblastoma Pathology Missed by Conventional Magnetic Resonance Imaging},
+  author={Ye, Zezhong and Price, Richard L and Liu, Xiran and Lin, Joshua and Yang, Qingsong and Sun, Peng and Wu, Anthony and Wang, Liang and Han, Rowland and Song, Chunyu and others},
+  journal={bioRxiv},
+  pages={843367},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{ye2020diffusion,
+  title={Diffusion basis spectrum imaging with deep neural network differentiates distinct histology in pediatric brain tumors},
+  author={Ye, Zezhong and Srinivasa, Komal and Lin, Joshua and Viox, Jeffrey D and Song, Chunyu and Wu, Anthony T and Sun, Peng and Song, Sheng-Kwei and Dahiya, Sonika and Rubin, Joshua B},
+  journal={bioRxiv},
+  pages={2020--04},
   year={2020},
-  publisher={John Wiley \& Sons, Inc.}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
-@article{abouzari2021adapting,
-  title={Adapting personal therapies using a mobile application for tinnitus rehabilitation: a preliminary study},
-  author={Abouzari, Mehdi and Goshtasbi, Khodayar and Sarna, Brooke and Ghavami, Yaser and Parker, Erica M and Khosravi, Pooya and Mostaghni, Navid and Jamshidi, Shahrnaz and Saber, Tina and Djalilian, Hamid R},
-  journal={Annals of Otology, Rhinology \& Laryngology},
-  volume={130},
-  number={6},
-  pages={571--577},
+@article{ye2020deep,
+  title={Deep learning with diffusion basis spectrum imaging for classification of multiple sclerosis lesions},
+  author={Ye, Zezhong and George, Ajit and Wu, Anthony T and Niu, Xuan and Lin, Joshua and Adusumilli, Gautam and Naismith, Robert T and Cross, Anne H and Sun, Peng and Song, Sheng-Kwei},
+  journal={Annals of clinical and translational neurology},
+  volume={7},
+  number={5},
+  pages={695--706},
+  year={2020}
+}
+
+@article{ye2021diffusion,
+  title={Diffusion histology imaging differentiates distinct pediatric brain tumor histology},
+  author={Ye, Zezhong and Srinivasa, Komal and Meyer, Ashely and Sun, Peng and Lin, Joshua and Viox, Jeffrey D and Song, Chunyu and Wu, Anthony T and Song, Sheng-Kwei and Dahiya, Sonika and others},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={4749},
   year={2021},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+  publisher={Nature Publishing Group UK London}
 }
 
+@article{ye2020diffusion,
+  title={Diffusion histology imaging combining diffusion basis spectrum imaging (DBSI) and machine learning improves detection and classification of glioblastoma pathology},
+  author={Ye, Zezhong and Price, Richard L and Liu, Xiran and Lin, Joshua and Yang, Qingsong and Sun, Peng and Wu, Anthony T and Wang, Liang and Han, Rowland H and Song, Chunyu and others},
+  journal={Clinical Cancer Research},
+  volume={26},
+  number={20},
+  pages={5388--5399},
+  year={2020},
+  publisher={American Association for Cancer Research}
+}
 
-
-@article{tsutsumi2021web,
-  title={A web-based deep learning model for automated diagnosis of otoscopic images},
-  author={Tsutsumi, Kotaro and Goshtasbi, Khodayar and Risbud, Adwight and Khosravi, Pooya and Pang, Jonathan C and Lin, Harrison W and Djalilian, Hamid R and Abouzari, Mehdi},
-  journal={Otology \& Neurotology},
-  volume={42},
-  number={9},
-  pages={e1382--e1388},
+@article{ye2021deep,
+  title={Deep neural network analysis employing diffusion basis spectrum imaging metrics as classifiers improves prostate cancer detection and grading},
+  author={Ye, Zezhong and Yang, Qingsong and Lin, Joshua and Sun, Peng and Shao, Chengwei and Yu, Yongwei and Chen, Luguang and Zhu, Yasheng and Wu, Anthony T and George, Ajit and others},
+  journal={bioRxiv},
+  pages={2021--03},
   year={2021},
-  publisher={LWW}
+  publisher={Cold Spring Harbor Laboratory}
 }
 
-@article{tsutsumi2022machine,
-  title={Machine Learning in the Management of Lateral Skull Base Tumors: A Systematic Review},
-  author={Tsutsumi, Kotaro and Soltanzadeh-Zarandi, Sina and Khosravi, Pooya and Goshtasbi, Khodayar and Djalilian, Hamid R and Abouzari, Mehdi},
-  journal={Journal of Otorhinolaryngology, Hearing and Balance Medicine},
-  volume={3},
-  number={4},
-  pages={7},
-  year={2022},
-  abbr={OHBM},
-  publisher={MDPI}
+@phdthesis{wu2021modular,
+  title={Modular Neural Network and Clustering using Diffusion Basis Spectrum Imaging (DBSI) metrics improves Prostate Cancer Grading},
+  author={Wu, Anthony},
+  year={2021},
+  school={Washington University in St. Louis}
 }
 
-@article{kamalipour2023deep,
-  title={Deep learning estimation of 10-2 visual field map based on circumpapillary retinal nerve fiber layer thickness measurements},
-  author={Kamalipour, Alireza and Moghimi, Sasan and Khosravi, Pooya and Jazayeri, Mohammad Sadegh and Nishida, Takashi and Mahmoudinezhad, Golnoush and Li, Elizabeth H and Christopher, Mark and Liebmann, Jeffrey M and Fazio, Massimo A and others},
-  journal={American Journal of Ophthalmology},
-  volume={246},
-  pages={163--173},
+@article{yediffusion,
+  title={Diffusion Histology Imaging Characterizes and Differentiates Various Tumor Histological Features in High-Grade Brain Tumors},
+  author={Ye, Zezhong and Gary, Sam E and Viox, Jeffrey D and Wu, Anthony T and Lin, Joshua and Sun, Peng and Rubin, Joshua B and Dahiya, Sonika and Song, Sheng-Kwei}
+}
+
+@article{yediffusion,
+  title={Diffusion Histology Imaging Classifies Lesions in Multiple Sclerosis},
+  author={Ye, Zezhong and George, Ajit and Wu, Anthony T and Niu, Xuan and Lin, Joshua and Adusumilli, Gautam and Naismith, Robert T and Cross, Anne H and Sun, Peng and Song, Sheng-Kwei}
+}
+
+@article{rahmani2023twelve,
+  title={Twelve Weeks of Intermittent Caloric Restriction Diet Mitigates Neuroinflammation in Midlife Individuals with Multiple Sclerosis: A Pilot Study with Implications for Prevention of Alzheimer’s Disease},
+  author={Rahmani, Farzaneh and Ghezzi, Laura and Tosti, Valeria and Liu, Jingxia and Song, Sheng-Kwei and Wu, Anthony T and Rajamanickam, Jayashree and Obert, Kathleen A and Benzinger, Tammie LS and Mittendorfer, Bettina and others},
+  journal={Journal of Alzheimer's Disease},
+  volume={93},
+  number={1},
+  pages={263--273},
   year={2023},
-  abbr={AJO},
-  selected={true},
-  publisher={Elsevier}
+  publisher={IOS Press}
 }
 
-@article{kamalipour2023combining,
-  title={Combining Optical Coherence Tomography and Optical Coherence Tomography Angiography Longitudinal Data for the Detection of Visual Field Progression in Glaucoma},
-  author={Kamalipour, Alireza and Moghimi, Sasan and Khosravi, Pooya and Mohammadzadeh, Vahid and Nishida, Takashi and Micheletti, Eleonora and Wu, Jo-Hsuan and Mahmoudinezhad, Golnoush and Li, Elizabeth HF and Christopher, Mark and others},
-  journal={American Journal of Ophthalmology},
-  volume={246},
-  pages={141--154},
-  abbr={AJO},
-  selected={true},
-  year={2023},
-  publisher={Elsevier}
-}
-
-
-@article{tsutsumi2023artificial,
-  title={Artificial neural network prediction of post-thyroidectomy outcome},
-  author={Tsutsumi, Kotaro and Goshtasbi, Khodayar and Ahmed, Khwaja H and Khosravi, Pooya and Tawk, Karen and Haidar, Yarah M and Tjoa, Tjoson and Armstrong, William B and Abouzari, Mehdi},
-  journal={Clinical Otolaryngology},
-  year={2023}
+@article{dutta2024physician,
+  title={Physician marriage survey reveals sex and specialty differences in marital satisfaction factors},
+  author={Dutta, Rajeev R and Wu, Anthony T and Picton, Bryce and Shah, Saloni and Chernyak, Michelle and Bauer, Kelly and Solomon, Sean and Chang, Josephine and Nguyen, Britney and Jiang, Mio and others},
+  journal={Scientific Reports},
+  volume={14},
+  number={1},
+  pages={5159},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
 }
