Added years papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,21 +77,25 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
-@phdthesis{wu2021modular,
+@mastersthesis{wu2021modular,
   title={Modular Neural Network and Clustering using Diffusion Basis Spectrum Imaging (DBSI) metrics improves Prostate Cancer Grading},
   author={Wu, Anthony},
   year={2021},
   school={Washington University in St. Louis}
 }
 
-@article{yediffusion,
+@inproceedings{ye2020diffusion,
   title={Diffusion Histology Imaging Characterizes and Differentiates Various Tumor Histological Features in High-Grade Brain Tumors},
-  author={Ye, Zezhong and Gary, Sam E and Viox, Jeffrey D and Wu, Anthony T and Lin, Joshua and Sun, Peng and Rubin, Joshua B and Dahiya, Sonika and Song, Sheng-Kwei}
+  author={Ye, Zezhong and Gary, Sam E and Viox, Jeffrey D and Wu, Anthony T and Lin, Joshua and Sun, Peng and Rubin, Joshua B and Dahiya, Sonika and Song, Sheng-Kwei},
+  year={2021},
+  organization={ISMRM}
 }
 
-@article{yediffusion,
+@proceedings{ye2020diffusion,
   title={Diffusion Histology Imaging Classifies Lesions in Multiple Sclerosis},
-  author={Ye, Zezhong and George, Ajit and Wu, Anthony T and Niu, Xuan and Lin, Joshua and Adusumilli, Gautam and Naismith, Robert T and Cross, Anne H and Sun, Peng and Song, Sheng-Kwei}
+  author={Ye, Zezhong and George, Ajit and Wu, Anthony T and Niu, Xuan and Lin, Joshua and Adusumilli, Gautam and Naismith, Robert T and Cross, Anne H and Sun, Peng and Song, Sheng-Kwei},
+  year={2021},
+  organization={ISMRM}
 }
 
 @article{rahmani2023twelve,
