Updated website tabs and bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,7 +43,13 @@
   volume={7},
   number={5},
   pages={695--706},
-  year={2020}
+  year={2020},
+  abbr={ACTN},
+  selected={true},
+  doi={10.1002/acn3.51037},
+  altmetric={80099820},
+  dimensions={true},
+  preview={IMG_MS_ANA_2020.jpg}
 }
 
 @article{ye2021diffusion,
@@ -54,7 +60,12 @@
   number={1},
   pages={4749},
   year={2021},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  abbr={Sci. Rep.},
+  selected={true},
+  doi={10.1038/s41598-021-84252-3},
+  dimensions={true},
+  preview={IMG_CCR_2020.jpg}
 }
 
 @article{ye2020diffusion,
@@ -65,7 +76,13 @@
   number={20},
   pages={5388--5399},
   year={2020},
-  publisher={American Association for Cancer Research}
+  publisher={American Association for Cancer Research},
+  abbr={AACR},
+  selected={true},
+  doi={10.1158/1078-0432.CCR-20-0736},
+  altmetric={86209506},
+  dimensions={true},
+  preview={IMG_CCR_2020.jpg}
 }
 
 @article{ye2021deep,
@@ -106,7 +123,9 @@
   number={1},
   pages={263--273},
   year={2023},
-  publisher={IOS Press}
+  publisher={IOS Press},
+  abbr={JAD},
+  selected={true}
 }
 
 @article{dutta2024physician,
@@ -117,5 +136,7 @@
   number={1},
   pages={5159},
   year={2024},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  abbr={Sci. Rep.},
+  selected={true}
 }
