Updates photos, uploaded NIH biosketch

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -65,7 +65,8 @@
   selected={true},
   doi={10.1038/s41598-021-84252-3},
   dimensions={true},
-  preview={IMG_CCR_2020.jpg}
+  html={https://www.nature.com/articles/s41598-021-84252-3},
+  preview={IMG_DHI_SCIREP_2020.jpg}
 }
 
 @article{ye2020diffusion,
@@ -124,6 +125,7 @@
   pages={263--273},
   year={2023},
   publisher={IOS Press},
+  dimensions={true},
   abbr={JAD},
   selected={true}
 }
@@ -137,6 +139,7 @@
   pages={5159},
   year={2024},
   publisher={Nature Publishing Group UK London},
+  dimensions={true},
   abbr={Sci. Rep.},
   selected={true}
 }
