--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,6 +49,7 @@
   doi={10.1002/acn3.51037},
   altmetric={80099820},
   dimensions={true},
+  html={https://onlinelibrary.wiley.com/doi/10.1002/acn3.51037},
   preview={IMG_MS_ANA_2020.jpg}
 }
 
@@ -83,6 +84,7 @@
   doi={10.1158/1078-0432.CCR-20-0736},
   altmetric={86209506},
   dimensions={true},
+  html={https://aacrjournals.org/clincancerres/article/26/20/5388/82717/Diffusion-Histology-Imaging-Combining-Diffusion},
   preview={IMG_CCR_2020.jpg}
 }
 
@@ -126,8 +128,10 @@
   year={2023},
   publisher={IOS Press},
   dimensions={true},
+  html={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10460547/pdf/nihms-1924105.pdf},
   abbr={JAD},
-  selected={true}
+  selected={true},
+  doi={10.3233/JAD-221007}
 }
 
 @article{dutta2024physician,
