--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,7 +46,7 @@
   year={2020},
   abbr={ACTN},
   selected={true},
-  doi={10.1002/acn3.51037},
+  doi={https://doi.org/10.1002/acn3.51037},
   altmetric={80099820},
   dimensions={true},
   html={https://onlinelibrary.wiley.com/doi/10.1002/acn3.51037},
@@ -64,7 +64,7 @@
   publisher={Nature Publishing Group UK London},
   abbr={Sci. Rep.},
   selected={true},
-  doi={10.1038/s41598-021-84252-3},
+  doi={https://doi.org/10.1038/s41598-021-84252-3},
   dimensions={true},
   html={https://www.nature.com/articles/s41598-021-84252-3},
   preview={IMG_DHI_SCIREP_2020.jpg}
@@ -81,7 +81,7 @@
   publisher={American Association for Cancer Research},
   abbr={AACR},
   selected={true},
-  doi={10.1158/1078-0432.CCR-20-0736},
+  doi={https://doi.org/10.1158/1078-0432.CCR-20-0736},
   altmetric={86209506},
   dimensions={true},
   html={https://aacrjournals.org/clincancerres/article/26/20/5388/82717/Diffusion-Histology-Imaging-Combining-Diffusion},
@@ -131,7 +131,7 @@
   html={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10460547/pdf/nihms-1924105.pdf},
   abbr={JAD},
   selected={true},
-  doi={10.3233/JAD-221007}
+  doi={https://doi.org/10.3233/JAD-221007}
 }
 
 @article{dutta2024physician,
