--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,8 @@
   number={3},
   pages={464a},
   year={2017},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  html={https://www.cell.com/biophysj/pdf/S0006-3495(16)33516-0.pdf}
 }
 
 @article{ye2019diffusion,
@@ -46,7 +47,7 @@
   year={2020},
   abbr={ACTN},
   selected={true},
-  doi={https://doi.org/10.1002/acn3.51037},
+  doi={10.1002/acn3.51037},
   altmetric={80099820},
   dimensions={true},
   html={https://onlinelibrary.wiley.com/doi/10.1002/acn3.51037},
@@ -64,7 +65,7 @@
   publisher={Nature Publishing Group UK London},
   abbr={Sci. Rep.},
   selected={true},
-  doi={https://doi.org/10.1038/s41598-021-84252-3},
+  doi={10.1038/s41598-021-84252-3},
   dimensions={true},
   html={https://www.nature.com/articles/s41598-021-84252-3},
   preview={IMG_DHI_SCIREP_2020.jpg}
@@ -81,7 +82,7 @@
   publisher={American Association for Cancer Research},
   abbr={AACR},
   selected={true},
-  doi={https://doi.org/10.1158/1078-0432.CCR-20-0736},
+  doi={10.1158/1078-0432.CCR-20-0736},
   altmetric={86209506},
   dimensions={true},
   html={https://aacrjournals.org/clincancerres/article/26/20/5388/82717/Diffusion-Histology-Imaging-Combining-Diffusion},
@@ -131,7 +132,7 @@
   html={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10460547/pdf/nihms-1924105.pdf},
   abbr={JAD},
   selected={true},
-  doi={https://doi.org/10.3233/JAD-221007}
+  doi={10.3233/JAD-221007}
 }
 
 @article{dutta2024physician,
@@ -144,6 +145,8 @@
   year={2024},
   publisher={Nature Publishing Group UK London},
   dimensions={true},
+  html={https://www.nature.com/articles/s41598-024-55437-3},
   abbr={Sci. Rep.},
-  selected={true}
+  selected={true},
+  doi={10.1038/s41598-024-55437-3}
 }
