--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -148,5 +148,6 @@
   html={https://www.nature.com/articles/s41598-024-55437-3},
   abbr={Sci. Rep.},
   selected={true},
-  doi={10.1038/s41598-024-55437-3}
+  doi={10.1038/s41598-024-55437-3},
+  preview={IMG_PHYSMAR_SCIREP_2024.jpg}
 }
