--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -151,3 +151,37 @@
   doi={10.1038/s41598-024-55437-3},
   preview={IMG_PHYSMAR_SCIREP_2024.jpg}
 }
+
+@article{wu2024tricuspid,
+  title={Automated Detection of Tricuspid Regurgitation Using Multiple Instance Learning on Doppler Echocardiograms},
+  author={Wu, Anthony T and Choi, H Nathan and Warren, Amanda and Shu, Gavin and Matthew, Tobin and Digrande, Kyle and Frangieh, Antonio and Kim, Jin Kyung and Xie, Xiaohui and Chang, Peter and Xu, Jennifer},
+  journal={Journal of Imaging Informatics in Medicine},
+  volume={37},
+  number={1},
+  pages={S2-S3},
+  year={2024},
+  publisher={Springer},
+  dimensions={true},
+  html={https://siim.org/wp-content/uploads/2024/08/Automated-Detection-of-Tricuspid_Wu.pdf},
+  abbr={JIIM},
+  selected={true},
+  doi={10.1007/s10278-024-01278-5},
+  preview={triRegCMIMI.jpg}
+}
+
+@article{wu2024radpath,
+  title={Natural Language Processing for Automated Correlation of Radiology and Pathology Reports in Prostate Cancer Detection},
+  author={Wu, Anthony T and Shu, Gavin and O'Connell, Ryan and Chang, Peter and Edwards, Robert and Park, Sungmee and Houshyar, Roozbeh},
+  journal={Journal of Imaging Informatics in Medicine},
+  volume={37},
+  number={1},
+  pages={S29-S30},
+  year={2024},
+  publisher={Springer},
+  dimensions={true},
+  html={https://siim.org/wp-content/uploads/2024/08/Natural-Language-Processing-for-Automated-Correlation_Wu.pdf},
+  abbr={JIIM},
+  selected={true},
+  doi={10.1007/s10278-024-01278-5},
+  preview={radPathCMIMI.jpg}
+}
